modified environment variable names. Wrote env setup and auth for qbittorrent_copy_on_complete.sh

--- a/qBittorrent/qbittorrent.env
+++ b/qBittorrent/qbittorrent.env
@@ -1,13 +1,25 @@
 #!/bin/bash
 
-readonly WEBUI_PORT=8280
-export WEBUI_PORT
+# hostname that is running qbittorrent. If script is running from the same location this should be localhost
+readonly QBIT_HOST=localhost
+export QBIT_HOST
 
-readonly USERNAME="admin"
-export USERNAME
+# qbittorrent WebUI port
+readonly QBIT_WEBUI_PORT=8280
+export QBIT_WEBUI_PORT
 
-readonly PASSWORD=""
-export PASSWORD
+# qbittorrent WebUI user
+readonly QBIT_WEBUI_USER="admin"
+export QBIT_WEBUI_USER
 
-readonly COPY_TO_DIR=""
-export COPY_TO_DIR
+# qbittorrent WebUI password
+readonly QBIT_WEBUI_PASS=""
+export QBIT_WEBUI_PASS
+
+# array of categories for which this script should be run. This is to prevent manually added torrents from getting stuck in the automatic workflow
+readonly QBIT_CATEGORIES=("tv-sonarr" "radarr")
+export QBIT_CATEGORIES
+
+# directory where torrents should be copied upon completion
+readonly QBIT_COPY_TO_DIR="/data/3-copied"
+export QBIT_COPY_TO_DIR
