update variable descriptions

--- a/qBittorrent/qbittorrent.env
+++ b/qBittorrent/qbittorrent.env
@@ -16,7 +16,7 @@ export QBIT_WEBUI_USER
 readonly QBIT_WEBUI_PASS=""
 export QBIT_WEBUI_PASS
 
-# array of categories for which this script should be run. This is to prevent manually added torrents from getting stuck in the automatic workflow
+# array of categories for which this script should be run. This is to prevent manually added torrents from going through the automatic workflow
 readonly QBIT_CATEGORIES=("tv-sonarr" "radarr")
 export QBIT_CATEGORIES
 
