remove test category, update seed ratio and time limit

--- a/qBittorrent/copy-on-complete/qbittorrent.env
+++ b/qBittorrent/copy-on-complete/qbittorrent.env
@@ -17,7 +17,7 @@ readonly QBIT_WEBUI_PASS=""
 export QBIT_WEBUI_PASS
 
 # array of categories for which this script should be run. This is to prevent manually added torrents from going through the automatic workflow
-readonly QBIT_CATEGORIES=("tv-sonarr" "radarr" "test")
+readonly QBIT_CATEGORIES=("tv-sonarr" "radarr")
 export QBIT_CATEGORIES
 
 # directory where torrents should be copied upon completion
@@ -25,9 +25,9 @@ readonly QBIT_COPY_TO_DIR="/data/3-copied"
 export QBIT_COPY_TO_DIR
 
 # the seed ratio limit to set when resuming a torrent. Use -1 for unlimited
-readonly QBIT_SEED_RATIO=1.5
+readonly QBIT_SEED_RATIO=-1
 export QBIT_SEED_RATIO
 
 # the seeding time limit in minutes. Use -1 for unlimited
-readonly QBIT_SEED_TIME=2
+readonly QBIT_SEED_TIME=2880
 export QBIT_SEED_TIME
