update share limit to POST and added new inactiveSeedingTimeLimit required parameter. Resume torrent also now must be POST. Added new variable in env file for inactiveSeedingTimeLimit

--- a/qBittorrent/copy-on-complete/qbittorrent.env
+++ b/qBittorrent/copy-on-complete/qbittorrent.env
@@ -28,6 +28,10 @@ export QBIT_COPY_TO_DIR
 readonly QBIT_SEED_RATIO=-1
 export QBIT_SEED_RATIO
 
-# the seeding time limit in minutes. Use -1 for unlimited
+# the total seeding time limit in minutes. Use -1 for unlimited
 readonly QBIT_SEED_TIME=2880
 export QBIT_SEED_TIME
+
+# the inactive seeding time limit in minutes. Use -1 for unlimited
+readonly QBIT_INACTIVE_SEEDING_TIME_LIMIT=-1
+export QBIT_INACTIVE_SEEDING_TIME_LIMIT
