add transcode category

--- a/qBittorrent/copy-on-complete/qbittorrent.env
+++ b/qBittorrent/copy-on-complete/qbittorrent.env
@@ -17,7 +17,7 @@ readonly QBIT_WEBUI_PASS=""
 export QBIT_WEBUI_PASS
 
 # array of categories for which this script should be run. This is to prevent manually added torrents from going through the automatic workflow
-readonly QBIT_CATEGORIES=("tv-sonarr" "radarr")
+readonly QBIT_CATEGORIES=("tv-sonarr" "radarr" "transcode")
 export QBIT_CATEGORIES
 
 # directory where torrents should be copied upon completion
