Add ability to skip transcode by setting tag in qbit

--- a/qBittorrent/copy-on-complete/.qbittorrent.env
+++ b/qBittorrent/copy-on-complete/.qbittorrent.env
@@ -17,12 +17,20 @@ readonly QBIT_WEBUI_PASS=""
 export QBIT_WEBUI_PASS
 
 # array of categories for which this script should be run. This is to prevent manually added torrents from going through the automatic workflow
-readonly QBIT_CATEGORIES=("tv-sonarr" "radarr" "transcode")
-export QBIT_CATEGORIES
+readonly QBIT_AUTOMATED_CATEGORIES=("tv-sonarr" "radarr" "automatic")
+export QBIT_AUTOMATED_CATEGORIES
 
-# directory where torrents should be copied upon completion
-readonly QBIT_COPY_TO_DIR="/data/3-copied"
-export QBIT_COPY_TO_DIR
+# tags for which the script should copy directly to completed directory, skipping transcode
+readonly QBIT_TRANSCODE_SKIP_TAGS=("skip-transcode")
+export QBIT_TRANSCODE_SKIP_TAGS
+
+# directory where torrents should be copied upon completion when transcoding is desired
+readonly QBIT_TRANSCODE_DIR="/data/3-copied"
+export QBIT_TRANSCODE_DIR
+
+# directory where torrents should be copied upon completion without transcode
+readonly QBIT_TRANSCODE_SKIP_DIR="/data/4-transcoded"
+export QBIT_TRANSCODE_SKIP_DIR
 
 # the seed ratio limit to set when resuming a torrent. Use -1 for unlimited
 readonly QBIT_SEED_RATIO=-1
